@@ -30,6 +30,7 @@ requires:
   Class::Utils: 0.03
   Data::MARC::Leader: 0.05
   Error::Pure: 0
+  Mo::utils: 0.05
   Scalar::Util: 0
   perl: 5.6.2
 resources:
