@@ -21,6 +21,7 @@ recursive_author_tests('xt');
 requires 'Class::Utils' => 0.03;
 requires 'Data::MARC::Leader' => 0.05;
 requires 'Error::Pure' => 0;
+requires 'Mo::utils' => 0.05;
 requires 'Scalar::Util' => 0;
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/MARC-Leader/issues',
 resources 'homepage' => 'https://github.com/michal-josef-spacek/MARC-Leader';
